# google-adk-demo

./: README.md  index.html  output.json  pyproject.toml
src/agents/: agent.py
src/mcp_server/: mcp_server.py
